styled form with bootstrap and fixed horizontal scroll

--- a/angular-fun/src/app/components/user/user.component.css
+++ b/angular-fun/src/app/components/user/user.component.css
@@ -1,6 +1,3 @@
-.form-control {
-	width: 33%;
-}
 
 .headers {
 	padding-top: 1rem;
